fix: remove the extra margins

--- a/src/styles/scss/components/_main.scss
+++ b/src/styles/scss/components/_main.scss
@@ -27,11 +27,10 @@
     }
 
     &__subtitle {
-        margin: 0 auto 12px auto;
+        margin: 0 auto;
         max-width: 423px;
 
         @media (max-width: 1919px) {
-            margin-bottom: 15px;
             max-width: 286px;
         }
     }
